<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">myPurse</string>
    <string name="startBal">Allowance</string>
    <string name="expendable_amt">Expendable Amount</string>
    <string name="addBalance">Add</string>
    <string name="cancel">Cancel</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>

    <string name="slide_1_title">Welcome to MyPurse!</string>
    <string name="slide_1_desc">Ever received money and Often wondered what you spent it on?
    </string>

    <string name="slide_2_title">Income</string>
    <string name="slide_2_desc">With myPurse you get to track all your incomes!</string>

    <string name="slide_3_title">Great Discounts</string>
    <string name="slide_3_desc">Best discounts on every single service we offer!</string>

    <string name="slide_4_title">World Travel</string>
    <string name="slide_4_desc">Book tickets of any transportation and travel the world!</string>
    <string name="play_again">Replay Intro</string>
    <string name="transaction_desc">transaction details</string>
    <string name="amount">Amount</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="about_us">About us</string>
    <string name="rate_us">Rate us</string>
    <string name="share">Share</string>
    <string name="signout">SignOut</string>
    <string name="transaction_history">Transaction history</string>
    <string name="reset">Reset account</string>
    <string name="expenditure_trend">Expenditure trend</string>
    <string name="notification_low_amt">Your expendable amount is low: &#8358;
        <xliff:g example="100" id="amount">%s</xliff:g>
    </string>


    <string name="to_buy_price">&#8358; <xliff:g example="20" id="amount">%s</xliff:g></string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="item_name">item name</string>
    <string name="condition_buy">when account balance is at least?</string>
    <string name="to_buy">To buy</string>
    <string name="priority">Priority</string>
    <string name="settings">Settings</string>

    <!--preferece settings values-->
    <string name="pref_start_balance_title">Start amount</string>
    <string name="pref_start_balance_summary">Add start amount</string>
    <string name="pref_key_start_balance">start_bal_key</string>

    <string name="pref_expendable_title">Expendable amount</string>
    <string name="pref_expendable_summary">Add expendable amount</string>
    <string name="pref_key_expendable">expendable_key</string>

    <string name="pref_expendable_threshold_title">Low amount threshold</string>
    <string name="pref_expendable_threshold_summary">At or below this value, App sends alert for
        low amount</string>
    <string name="pref_key_expendable_threshold">low_threshold_key</string>



    <string-array name="priority_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string name="about_US">The Android Nigeria Community (ANC) brings together a community of android developers to teach,
        learn and collaborate with each other to provide technological and business solutions to local (Africa) problems
        in order to enhance productivity and better lives through software development.</string>
    <string name="contact_us">"Twitter: @androidngr"\n
        "Meetup: https://www.meetup.com/Android-Nigeria-Meetup\n"
        "Phone: 07033950328| 08132957589"</string>
</resources>
