<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:id="@+id/app" android:checkableBehavior="single">

        <item android:id="@+id/nav_overview"
              android:title="@string/transaction_history"
              android:icon="@drawable/ic_import_export_black_24dp"
        />

        <item android:id="@+id/nav_chart"
              android:title="@string/expenditure_trend"
              android:icon="@drawable/ic_show_chart_black_24dp" />

        <item android:id="@+id/nav_reset"
              android:title="@string/reset"
              android:icon="@drawable/ic_delete_sweep_black_24dp"
              />
    </group>


    <group android:id="@+id/system" android:checkableBehavior="single">

        <item android:id="@+id/settings"
              android:title="@string/settings"
              android:icon="@drawable/ic_settings_black_24dp"
              />

            <item android:id="@+id/nav_about"
                  android:title="@string/about_us"
                  android:icon="@drawable/ic_person_black_24dp" />

            <item android:id="@+id/nav_rate"
                  android:title="@string/rate_us"
                  android:icon="@drawable/ic_thumbs_up_down_black_24dp" />
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/share" />
            <item
                android:id="@+id/nav_signout"
                android:icon="@drawable/ic_power_settings_new_black_24dp"
                android:title="@string/signout" />
    </group>

</menu>
